# mcp-clinical-doc-agent

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  claude_desktop_config.example.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: protocol_001_nsclc_pembro.md  protocol_002_hfref_dapaglifozin.md  protocol_003_t2d_glp1.md  protocol_004_ra_jak.md  protocol_005_mdd_psilocybin.md  protocol_006_atopic_dermatitis_biologic.md  protocol_007_crohns_tl1a.md  protocol_008_alzheimers_amyloid.md  protocol_009_als_aso.md  protocol_010_uti_antibiotic.md
scripts/: analyze.py  run_workflow.py
src/mcp_clinical_doc_agent/: __init__.py  api.py  etl.py  schema.py  server.py  tools.py
src/mcp_clinical_doc_agent/graph/: eval.py  nodes.py  workflow.py
tests/: test_etl.py  test_tools.py  test_workflow.py
